--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,21 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+        { 
+            "name": "libTAPMD (gdb) Attach",
+            "type": "cppdbg",
+            "request": "attach",
+            "program": "${workspaceFolder}/dst/libTAPMD.so",
+            "processId": "${command:pickProcess}",
+            "MIMode": "gdb",
+            "setupCommands": [
+                {
+                    "description": "Enable pretty-printing for gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                }
+            ]
+        },
         {
             "name": "TapQuoteAPI (gdb) Launch",
             "type": "cppdbg",
@@ -41,6 +56,31 @@
                 {
                     "name": "LD_LIBRARY_PATH",
                     "value": "./api/lib"
+                }
+            ],
+            // "additionalSOLibSearchPath": "${workspaceFolder}/api/lib",
+            "externalConsole": false,
+            "MIMode": "gdb",
+            "setupCommands": [
+                {
+                    "description": "Enable pretty-printing for gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                }
+            ]
+        },
+        {
+            "name": "TapMDTest (gdb) Launch",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/dst/impl/Main.out",
+            "args": [],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}",
+            "environment": [
+                {
+                    "name": "LD_LIBRARY_PATH",
+                    "value": "./api/lib:/usr/local/lib:/usr/local/unown:${LD_LIBRARY_PATH}"
                 }
             ],
             // "additionalSOLibSearchPath": "${workspaceFolder}/api/lib",
