milestone1: use new jni header to make the whole process work

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -85,7 +85,7 @@
                 "-ggdb",
                 "impl/TAPMarketDataImpl.cpp",
                 "impl/TAPSimpleEvent.cpp",
-                "jni/native_ctp.cpp",
+                "jni/native_tap.cpp",
                 "-fPIC",
                 "-shared",
                 "-o",
