--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -148,6 +148,39 @@
             "problemMatcher": [
                 "$gcc"
             ]
+        },
+        {
+            "type": "shell",
+            "label": "main test build",
+            "command": "/usr/bin/g++",
+            "args": [
+                "-std=c++11",
+                "-ggdb",
+                "maintest.cpp",
+                // "impl/TAPOrderEntryImpl.cpp",
+                "-o",
+                "dst/maintest.out",
+                "-I${workspaceFolder}/api/include",
+                "-I${workspaceFolder}/impl",
+                "-I${workspaceFolder}/jni",
+                "-I/usr/local/include/unlib",
+                "-I/usr/java/jdk1.8.0_192-amd64/include/linux",
+                "-I/usr/java/jdk1.8.0_192-amd64/include",
+                "-L/usr/local/lib",
+                "-L/usr/local/unown",
+                "-L${workspaceFolder}/api/lib",
+                "-lboost_thread",
+                "-lboost_locale",
+                "-lboost_system",
+                "-lpthread",
+                "-lunlib",
+                "-lTapTradeAPI",
+                "-lTapQuoteAPI"
+            ],
+            "problemMatcher": [
+                "$gcc"
+            ],
+            "group": "build"
         }
-     ]
+    ]
 }
