--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -157,7 +157,8 @@
                 "-std=c++11",
                 "-ggdb",
                 "maintest.cpp",
-                // "impl/TAPOrderEntryImpl.cpp",
+                "impl/TAPOrderEntryImpl.cpp",
+                "impl/TAPSimpleEvent.cpp",
                 "-o",
                 "dst/maintest.out",
                 "-I${workspaceFolder}/api/include",
