add filesystem check

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,6 +19,21 @@
                 }
             ]
         },
+        { 
+            "name": "libTAPOE (gdb) Attach",
+            "type": "cppdbg",
+            "request": "attach",
+            "program": "${workspaceFolder}/dst/libTAPOE.so",
+            "processId": "${command:pickProcess}",
+            "MIMode": "gdb",
+            "setupCommands": [
+                {
+                    "description": "Enable pretty-printing for gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                }
+            ]
+        },
         {
             "name": "TapQuoteAPI (gdb) Launch",
             "type": "cppdbg",
