--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -151,6 +151,43 @@
         },
         {
             "type": "shell",
+            "label": "libTAPOE build - Debug version",
+            "command": "/usr/bin/g++",
+            "args": [
+                "-std=c++11",
+                "-ggdb",
+                "impl/TAPOrderEntryImpl.cpp",
+                "impl/TAPSimpleEvent.cpp",
+                "jni/native_tap.cpp",
+                "-fPIC",
+                "-shared",
+                "-o",
+                "dst/libTAPOE.so",
+                "-I${workspaceFolder}/api/include",
+                "-I${workspaceFolder}/impl",
+                "-I${workspaceFolder}/jni",
+                "-I/usr/local/include/unlib",
+                "-I/usr/java/jdk1.8.0_192-amd64/include/linux",
+                "-I/usr/java/jdk1.8.0_192-amd64/include",
+                "-L/usr/local/lib",
+                "-L/usr/local/unown",
+                "-L${workspaceFolder}/api/lib",
+                "-lboost_thread",
+                "-lboost_locale",
+                "-lboost_system",
+                "-lboost_filesystem",
+                "-lpthread",
+                "-lunlib",
+                "-lTapTradeAPI",
+                "-lTapQuoteAPI"
+            ],
+            "problemMatcher": [
+                "$gcc"
+            ],
+            "group": "build"
+        },
+        {
+            "type": "shell",
             "label": "main test build",
             "command": "/usr/bin/g++",
             "args": [
