split secid to get product and contract

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -246,6 +246,7 @@
                 "-lboost_thread",
                 "-lboost_locale",
                 "-lboost_system",
+                "-lboost_filesystem",
                 "-lpthread",
                 "-lunlib",
                 "-lTapTradeAPI",
